[ADDITION] Xmas header
Xmas theme will be applied from 15 December to 15 January

Themes supports xmas modifications too, just put your "xmas.css" file in the same folder as "styles.css" there

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -17,12 +17,21 @@
                 {if $theme->inheritDefault()}
                     {css "css/style.css"}
                     {css "css/dialog.css"}
+                    {if $isXmas}
+                        {css "css/xmas.css"}
+                    {/if}
                 {/if}
                 
                 <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/stylesheet/styles.css" />
+                {if $isXmas}
+                    <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/stylesheet/xmas.css" />
+                {/if}
             {else}
                 {css "css/style.css"}
                 {css "css/dialog.css"}
+                {if $isXmas}
+                    {css "css/xmas.css"}
+                {/if}
             {/if}
             
             {if $thisUser->getStyleAvatar() == 1}
@@ -34,6 +43,9 @@
         {else}
             {css "css/style.css"}
             {css "css/dialog.css"}
+            {if $isXmas}
+                {css "css/xmas.css"}
+            {/if}
         {/ifset}
         
         {ifset headIncludes}{include headIncludes}{/ifset}
