[NEW FEATURE] Microblog
Can be enabled in settings

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -40,6 +40,11 @@
             {if $thisUser->getStyleAvatar() == 2}
                     {css "css/avatar.2.css"}
             {/if}
+
+            
+            {if $thisUser->hasMicroblogEnabled() == 1}
+                    {css "css/microblog.css"}
+            {/if}
         {else}
             {css "css/style.css"}
             {css "css/dialog.css"}
