--- a/Web/static/css/nsfw-posts.css
+++ b/Web/static/css/nsfw-posts.css
@@ -1,5 +1,5 @@
 .post-nsfw .post-content img.media {
-    filter: saturate(0.8) blur(5px);
+    filter: saturate(0.8) blur(15px);
 }
 
 .post-nsfw .post-content .attachment {
@@ -7,7 +7,7 @@
     position: relative;
 }
 
-.post-nsfw .post-content .attachment:hover img.media {
+.post-nsfw .post-content .attachment:active img.media {
     filter: none;
 }
 
@@ -23,6 +23,6 @@
     content: attr(data-localized-nsfw-text);
 }
 
-.post-nsfw .post-content .attachment:hover::after {
+.post-nsfw .post-content .attachment:active::after {
     display: none;
 }
